# very_simple_python_bazel

./: README.md  WORKSPACE.bazel
projects/calculator/: BUILD.bazel  calculator.py  calculator_test.py
projects/projectA/: BUILD.bazel
projects/python_app/: BUILD.bazel  main.py
